--- a/client/src/assets/partials/_variables.scss
+++ b/client/src/assets/partials/_variables.scss
@@ -8,9 +8,9 @@ $secondary-text: #FFFFFF;
 $secondary-text2: #9290C3;
 $hero-background: #1B1A55;
 $background: #535C91;
-$accent-color: #4eafaf;
+$accent-color: #4bc5c5;
 $secondary-accent-color: #D99A9E;
-$tertiary-accent-color: #FF58BF;
+$tertiary-accent-color: #ff13a4;
 
 //padding
 $mobile-padding: 0 1rem;
