--- a/client/src/components/HomePageCard/HomePageCard.scss
+++ b/client/src/components/HomePageCard/HomePageCard.scss
@@ -1,15 +1,17 @@
 @use "../../assets/partials/mixins" as *;
 @use "../../assets/partials/variables" as *;
+@use "../../assets/partials/keyframes" as *;
 
 .container {
     display: flex;
     flex-direction: column;
     background-color: $primary-text;
     padding: 1rem;
-    height: 15rem;
-    margin-bottom: 2rem;
+    height: 20rem;
     border-radius: 1rem;
     box-shadow: 0 0 10px $tertiary-accent-color;
+    margin: 1rem 1rem 2rem 1rem;
+    animation: fadeIn 1s;
 
     &__number{
         font-size: 2rem;
@@ -25,6 +27,6 @@
     &__description {
         display: flex;
         font-size: 0.625rem;
-        width: 100%;
+        width: 80%;
     }
 }
