--- a/client/src/assets/partials/_variables.scss
+++ b/client/src/assets/partials/_variables.scss
@@ -3,7 +3,7 @@ $desktop-breakpoint: 1200px;
 $tablet-breakpoint: 768px;
 
 //color pallete
-$primary-text: #070F2B;
+$primary-text: #192348;
 $secondary-text: #FFFFFF;
 $secondary-text2: #9290C3;
 $hero-background: #1B1A55;
