add more styling

--- a/client/src/assets/partials/_variables.scss
+++ b/client/src/assets/partials/_variables.scss
@@ -3,14 +3,15 @@ $desktop-breakpoint: 1200px;
 $tablet-breakpoint: 768px;
 
 //color pallete
-$primary-text: #192348;
+$primary-text: #E0E0E0;
 $secondary-text: #FFFFFF;
-$secondary-text2: #9290C3;
-$hero-background: #1B1A55;
-$background: #535C91;
-$accent-color: #4bc5c5;
-$secondary-accent-color: #D99A9E;
-$tertiary-accent-color: #ff13a4;
+$secondary-text2: #B3B3B3;
+$hero-background: #0D0D2B;
+$background: #1A1A3A;
+$accent-color: #00D9FF;
+$secondary-accent-color: #FF6F6F;
+$tertiary-accent-color: #FF00A1;
+$card-background: #0D0D2A ;
 
 //padding
 $mobile-padding: 0 1rem;
