--- a/client/src/pages/BoardPage/Draggable.scss
+++ b/client/src/pages/BoardPage/Draggable.scss
@@ -8,7 +8,7 @@
     width: 90%;
     margin: 0.5rem 0.5rem;
     min-height: 6rem;
-    background-color:rgb(35, 33, 103);
+    background-color: $card-background;
     display: flex;
     justify-content: center;
     align-items: center;
