--- a/client/src/pages/BoardPage/Droppable.scss
+++ b/client/src/pages/BoardPage/Droppable.scss
@@ -6,7 +6,8 @@
     align-items: center;
     width: 25%;
     background-color: $background;
-    margin: 1rem 0.25rem;
+    margin: 1rem 0.375rem;
     padding: 1rem 0;
     border-radius: 1rem;
+    box-shadow: 0 0 8px white;
 }
