--- a/client/src/pages/BoardPage/Droppable.scss
+++ b/client/src/pages/BoardPage/Droppable.scss
@@ -10,4 +10,8 @@
     padding: 1rem 0;
     border-radius: 1rem;
     box-shadow: 0 0 8px white;
+
+    &__modal {
+        margin-top: auto;
+    }
 }
