--- a/client/src/components/AddCard/AddCard.scss
+++ b/client/src/components/AddCard/AddCard.scss
@@ -44,6 +44,12 @@
         font-size: 1.5rem;
     }
 
+    &__title-right {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
     &__input {
         height: 3rem;
         border-radius: 0.5rem;
