--- a/client/src/components/AddCard/AddCard.scss
+++ b/client/src/components/AddCard/AddCard.scss
@@ -22,11 +22,19 @@
     font-size: 1rem;
 }
 
-.modal-container{
+.modal-container {
     background-color: $background;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 80%;
+    width: 60%;
+    padding: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .modal {
@@ -47,7 +55,7 @@
     &__title-right {
         display: flex;
         align-items: center;
-        gap: 1rem;
+        gap: 2rem;
     }
 
     &__input {
@@ -62,6 +70,11 @@
     &__description {
         font-size: 1.5rem;
         padding: 0.5rem 0;
+    }
+
+    &__description-row {
+        display: flex;
+        justify-content: space-between;
     }
 
     &__textarea {
