--- a/client/src/components/DonutChart/DonutChart.scss
+++ b/client/src/components/DonutChart/DonutChart.scss
@@ -7,5 +7,10 @@
     &__header{
         font-size: 1.5rem;
         font-weight: 600;
+        margin: 1rem 0;
+    }
+
+    &__chart{
+        width: 30rem;
     }
 }
