--- a/client/src/pages/ProjectDetails/ProjectDetails.scss
+++ b/client/src/pages/ProjectDetails/ProjectDetails.scss
@@ -1,4 +1,14 @@
 .details {
-    display: flex;
-    justify-content: center;
+    padding: 0 6rem;
+
+    &__header {
+        font-size: 2rem;
+        font-weight: 600;
+        margin: 1rem 0;
+    }
+
+    &__chart {
+        display: flex;
+        justify-content: center;
+    }
 }
