--- a/client/src/components/SideNav/SideNav.scss
+++ b/client/src/components/SideNav/SideNav.scss
@@ -42,6 +42,8 @@
 
     &__delete {
         font-size: 0.75rem;
+        color: $tertiary-accent-color;
+        font-weight: 600;
     }
 
     &__body {
@@ -54,7 +56,7 @@
     }
 
     &__hr {
-        color: $tertiary-accent-color;
+        border: 1px solid $accent-color;
     }
 }
 
