add frotnend auth for user login/logout

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -18,7 +18,7 @@
     }
 
     &__nav-layout {
-        display: none;
+        // display: none;
         @include tablet {
             display: flex;
             width: 100%;
