--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -18,10 +18,15 @@
 
     &__header {
         font-weight: 600;
+        font-size: 1rem;
+
+        @include tablet {
+            font-size: 1.5rem;
+
+        }
     }
 
     &__nav-layout {
-        // display: none;
         @include tablet {
             display: flex;
             width: 100%;
@@ -33,9 +38,13 @@
     }
 
     &__img {
-        width: 3.5rem;
+        width: 2.5rem;
         height: auto;
         margin: 1rem 0;
+
+        @include tablet {
+            width: 3.5rem;
+        }
     }
 
     &__more {
@@ -45,18 +54,27 @@
     &__buttons{
         display: flex;
         flex-direction: row;
-        gap:1rem;
+        gap: 0.5rem;
+
+        @include tablet {
+            gap: 1rem;
+        }
     }
 
     &__button {
         border: none;
         background-color: $accent-color;
-        font-size: 1rem;
-        border-radius: 1rem;;
+        border-radius: 1rem;
         color: $background;
         font-weight: 600;
-        padding: 0.5rem 1rem;
         font-family: 'Montserrat', sans-serif;
         cursor: pointer;
+        padding: 0.25rem 0.5rem;
+
+        @include tablet {
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+
+        }
     }
 }
