--- a/client/src/pages/BoardPage/Droppable.scss
+++ b/client/src/pages/BoardPage/Droppable.scss
@@ -1,15 +1,20 @@
 @use '../../assets/partials/variables' as *;
+@use '../../assets/partials/mixins' as *;
 
 .droppable {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25%;
+    width: 100%;
     background-color: $background;
-    margin: 1rem 0.375rem;
-    padding: 1rem 0;
-    border-radius: 1rem;
     box-shadow: 0 0 8px white;
+    border-radius: 1rem;
+    padding: 1rem 0;
+    margin: 1rem 0;
+
+    @include tablet{
+        width: 25%;
+    }
 
     &__header {
         align-self: center;
