--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -1,4 +1,5 @@
 @use '../../assets/partials/variables' as *;
+@use '../../assets/partials/mixins' as *;
 
 .login-page {
     background-color: $background;
@@ -13,12 +14,20 @@
 .login {
     display: flex;
     flex-direction: column;
-    width: 22rem;
     box-shadow: 0 2px 16px rgba(0, 0, 0, 0.1);
     background-color: $secondary-text;
     border-radius: 0.5rem;
     padding: 2rem 1.5rem;
     margin-bottom: 1rem;
+    width: 90%;
+
+    @include tablet {
+        width: 50%;
+    }
+
+    @include desktop {
+        width: 30%;
+    }
 
     &__title {
         margin-top: 0;
@@ -51,8 +60,9 @@
     }
 
     &__message {
-        border-left: 5px solid $primary-text;
+        border-left: 5px solid $tertiary-accent-color;
         padding: 0.75rem;
         margin-top: 2rem;
+        color: $background;
     }
 }
