--- a/client/src/pages/ProjectDetails/ProjectDetails.scss
+++ b/client/src/pages/ProjectDetails/ProjectDetails.scss
@@ -5,6 +5,11 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 90%;
+
+    // @include tablet {
+    //     width: 100%;
+    // }
 
     @include tablet {
         padding: 0 3rem;
@@ -18,6 +23,10 @@
         font-size: 2rem;
         font-weight: 600;
         margin: 1rem 0;
+    }
+
+    &__body {
+        font-size: 0.75rem;
     }
 
     &__chart {
