--- a/client/src/components/BarChart/BarChart.scss
+++ b/client/src/components/BarChart/BarChart.scss
@@ -15,17 +15,25 @@ canvas {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 8rem 0;
+    margin-top: 6rem;;
 
     &__header {
-        font-size: 2rem;
+        font-size: 1.25rem;
         font-weight: 600;
         text-align: center;
         margin-bottom: 2rem;
+
+        @include tablet{
+            font-size: 2rem;
+        }
     }
 
     &__container {
-        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30rem;
+        height: 100%;
         max-width: 44rem;
         height: 25rem; 
     }
