--- a/client/src/components/DonutChart/DonutChart.scss
+++ b/client/src/components/DonutChart/DonutChart.scss
@@ -3,14 +3,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
     &__header{
         font-size: 1.5rem;
         font-weight: 600;
-        margin: 1rem 0;
+        margin: 2rem 0;
     }
 
     &__chart{
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 30rem;
     }
 }
