--- a/client/src/components/HomePageCard/HomePageCard.scss
+++ b/client/src/components/HomePageCard/HomePageCard.scss
@@ -2,12 +2,11 @@
 @use "../../assets/partials/variables" as *;
 @use "../../assets/partials/keyframes" as *;
 
-.container {
+.get-started {
     display: flex;
     flex-direction: column;
-    background-color: $primary-text;
+    background-color: $background;
     padding: 1rem;
-    height: 20rem;
     border-radius: 1rem;
     margin: 1rem 1rem 2rem 1rem;
     animation: fadeIn 1s;
@@ -16,16 +15,42 @@
         font-size: 2rem;
         color: $accent-color;
         font-weight: 700;
+
+        @include tablet {
+            font-size: 3rem;
+        }
     }
 
     &__title{
         font-size: 0.875rem;
         font-weight: 600;
+
+        @include tablet{
+            font-size: 1.5rem;;
+        }
     }
 
     &__description {
         display: flex;
         font-size: 0.625rem;
         width: 80%;
+
+        @include tablet {
+            font-size: 1rem;
+        }
+    }
+
+    &__img {
+        width: 10rem;
+        align-self: center;
+        margin: 0.5rem 0;
+
+        @include tablet{ 
+            width: 13rem;
+        }
+
+        @include desktop {
+            width: 15rem;
+        }
     }
 }
