--- a/client/src/components/hero/hero.scss
+++ b/client/src/components/hero/hero.scss
@@ -19,7 +19,7 @@
         flex-direction: column;
         position: relative;
         width: 100%;
-        height: 50vh;
+        height: 65vh;
         justify-content: center;
         align-items: center;
 
@@ -74,7 +74,27 @@
             top: 0;
             left: 0;
             transform: translateY(-13rem);
-            
+            height: 100%;
+        }
+    }
+
+    &__header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 5rem;
+    }
+
+    &__main-text {
+        font-weight: 700;
+        font-size: 1.25rem;
+        
+        @include tablet {
+            font-size: 2rem;
+        }
+
+        @include tablet {
+            font-size: 3rem;
         }
     }
 
