--- a/client/src/assets/partials/_keyframes.scss
+++ b/client/src/assets/partials/_keyframes.scss
@@ -15,3 +15,8 @@
         opacity: 100%;
     }
 }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
