--- a/client/src/components/hero/hero.scss
+++ b/client/src/components/hero/hero.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    padding: 0 1rem;
 
     @include desktop{
         height: 40rem;
@@ -28,39 +29,6 @@
         }
     }
 
-    &__spline-canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-
-        @include tablet {
-            display: none;
-        }
-
-        @include desktop{
-            display: none;
-        }
-    }
-
-    &__spline-canvas-tablet {
-        display: none;
-
-        @include tablet {
-            display: block;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            transform: translateY(-8rem);
-        }
-
-        @include desktop{
-            display: none;
-        }
-    }
-
     &__spline-canvas-desktop {
         display: none;
 
@@ -73,7 +41,6 @@
             position: absolute;
             top: 0;
             left: 0;
-            transform: translateY(-13rem);
             height: 100%;
         }
     }
@@ -83,6 +50,15 @@
         flex-direction: column;
         align-items: center;
         margin-top: 5rem;
+        width: 100%;
+    }
+
+    &__subheader {
+        font-size: 1rem;
+
+        @include tablet {
+            font-size: 2rem;
+        }
     }
 
     &__main-text {
@@ -112,18 +88,19 @@
         animation: slideIn 2s;
         z-index: 1;
         position: relative;
-        margin-top: 15rem;
+        margin-top: 5rem;
 
         @include tablet {
-            transform: translateY(3rem);
+            margin-top: 3rem;
         }
 
         @include desktop {
-            transform: translateY(0rem);
+            margin-top: 15rem;
         }
 
         &:hover {
             opacity: 50%;
         }
     }
+
 }
