--- a/client/src/assets/partials/_keyframes.scss
+++ b/client/src/assets/partials/_keyframes.scss
@@ -17,6 +17,22 @@
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% { 
+        transform: rotate(0deg); 
+    }
+    100% { 
+        transform: rotate(360deg); 
+    }
+}
+
+@keyframes loader {
+    0% { 
+        transform: rotate(0deg); 
+    }
+    50% {
+        transform: rotate(-90deg);
+    }
+    100% {
+        transform: rotate(360deg); 
+    }
 }
