--- a/client/src/pages/BoardPage/BoardPage.scss
+++ b/client/src/pages/BoardPage/BoardPage.scss
@@ -10,7 +10,7 @@
         max-width: 2.5rem;
         max-height: 2rem;
         padding-left: 0.5rem;
-        
+        cursor: pointer;
     }
 }
 
