--- a/client/src/pages/ProjectDetails/ProjectDetails.scss
+++ b/client/src/pages/ProjectDetails/ProjectDetails.scss
@@ -1,15 +1,11 @@
 @use '../../assets/partials/mixins' as *;
-
+@use '../../assets/partials/keyframes' as *;
 .details {
     padding: 0 1rem;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     width: 90%;
-
-    // @include tablet {
-    //     width: 100%;
-    // }
 
     @include tablet {
         padding: 0 3rem;
@@ -40,5 +36,41 @@
     &__chart {
         display: flex;
         justify-content: center;
+    }
+}
+
+.loading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+
+    &__text {
+        font-size: 1.25rem;
+        
+        
+        @include tablet{
+            font-size: 2rem;
+        }
+
+        @include desktop{
+            font-size: 2.5rem;
+        }
+    }
+
+    &__logo {
+        width: 2rem;
+        padding: 0.5rem 0;
+        animation: loader 1s linear infinite;
+        
+        @include tablet {
+            width: 3rem;
+            padding: 1rem 0
+        }
+
+        @include desktop {
+            width: 4rem;
+        }
     }
 }
