add more styling, remove commented out code

--- a/client/src/components/ViewCard/ViewCard.scss
+++ b/client/src/components/ViewCard/ViewCard.scss
@@ -1,5 +1,7 @@
+@use '../../assets/partials/variables'as *;
+
 .delete {
-    color: red;
-    background-color: aqua;
+    color: $background;
+    background-color: $accent-color;
     margin-right: auto;
 }
